--- a/Alien1916MASTER/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alien1916MASTER/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,6 +107,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=1
 CurrentScalingGridSize=4
 bSnapVertices=True
+SnapScaleEnabled=False
 
 [MRU]
 MRUItem0=/Game/LevelFolder/Level1/Armory
